# imtekSimulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
executables/: CMakeLists.txt  main.cpp
executables/02/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  lbmD2Q9.cpp  lbmD2Q9.hpp  milestone02.cpp  milestone02.hpp
tests/: CMakeLists.txt  gtest_mpi_main.cpp
